# PCQM

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: requirements-dev.txt  static_checks.yaml
source/: CMakeLists.txt  clockcom.cpp  clockcom.hpp  main.cpp  pcc_distortion.cpp  pcc_distortion.hpp  pcc_processing.cpp  pcc_processing.hpp
test/: anchor.py  config.ini  decode.py  intrinsic.py  merge.py
